--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -1,5 +1,9 @@
 {
   "translation": {
+    "404": {
+      "title": " Error 404 - Ця сторінка не існує. Спробуйте почати з головної сторінки.",
+      "button": "На головну"
+    },
     "errors": {
       "invalid-number": "Невірний ввід: \"{{value}}\". Дозволяються лише цифри.",
       "min-greater-max": "Мінімальне значення не може перевищувати максимальне значення"
@@ -84,6 +88,19 @@
         }
       }
     },
+    "about-us": {
+      "title": "Про нас",
+      "main-descr": "Fylpi — це платформа для пошуку нерухомості, яка зосереджена на прозорості, ефективності, інноваціях та сталому розвитку. Наша мета — допомогти людям знайти та придбати правильну нерухомість, навіть якщо вони не знайомі з ринком нерухомості та його місцевими особливостями.",
+      "communication-title": "ОРІЄНТОВАНА НА КЛІЄНТІВ КОМУНІКАЦІЯ",
+      "communication-descr": "Ми твердо віримо, що чесна та відкрита комунікація є ключем до довгострокових відносин. Наші клієнти можуть розраховувати на те, що ми завжди діємо в їхніх інтересах та надаємо всю необхідну інформацію та підтримку.",
+      "services-descr": "ВИДАТНІ ПОСЛУГИ В СФЕРІ НЕРУХОМОСТІ З ДОВІРОЮ, ПРОЗОРІСТЮ ТА ПРОФЕСІОНАЛІЗМОМ. БЕЗШОВНИЙ І БЕЗСТРЕСОВИЙ ДОСВІД ДЛЯ ПОКУПЦІВ ТА ПРОДАВЦІВ. ІННОВАЦІЙНІ РІШЕННЯ ТА ОСОБИСТИЙ ПІДХІД.",
+      "advantages": {
+        "knows": "Широка експертиза та глибокі знання.",
+        "all-info": "Повна інформація разом із усіма необхідними ресурсами.",
+        "social-media": "Сильна міжнародна присутність у соціальних мережах.",
+        "satisfaction": "98% задоволених клієнтів на основі відгуків."
+      }
+    },
     "footer": {
       "links": {
         "about-us": "Про нас",
@@ -95,8 +112,19 @@
         "service-property": "Обслуговування навколо помешкання",
         "practical-instr": "Практичні вказівки",
         "knowledge-property": "Про майно",
-        "advisory-services": "Консультаційні послуги"
+        "advisory-services": "Консультаційні послуги",
+        "contacts": "Контакти",
+        "terms-of-use": "Умови використання"
       }
+    },
+    "contacts": {
+      "title": "Контакти",
+      "register-entry": "Реєстраційний запис",
+      "bank-details": "Банківські реквізити",
+      "tel": "Тел",
+      "state": "Місто",
+      "uid": "UID-Номер",
+      "company-register-number": "Реєстраційний номер компанії"
     },
     "filters": {
       "buy": {
